<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Proxime</string>
    <string name="contacts_title">Contact</string>
    <string name="edit_event_add_contact">Add</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="locations_title">Location</string>
    <string name="new_location">New Location</string>
    <string name="edit_event_add_location">Add</string>
    <string name="message_title">Message</string>
    <string name="location_name">Name</string>
    <string name="span">Span (in meters)</string>
    
    <!-- menu titles -->
    <string name="menu_locations">Locations</string>
    <string name="menu_add_event">Add Event</string>
    <string name="menu_edit_event">Edit Event</string>
    <string name="menu_delete_event">Delete Event</string>
    <string name="menu_about">About</string>
    <string name="menu_events">Events</string>
    <string name="menu_add_location">Add Location</string>
    <string name="menu_edit_location">Edit Location</string>
    <string name="menu_rename_location">Rename Location</string>
    <string name="menu_delete_location">Delete Location</string>

    <!-- about dialog -->
    <string name="about_title">About Proxime</string>
    <string name="about_message">
    	&lt;b&gt;Proxime v1.0&lt;/b&gt;&lt;br /&gt;&lt;br /&gt;
    	&lt;b&gt;Contributors::&lt;/b&gt;&lt;br /&gt;&lt;br /&gt;
        Pradeep Sashidhara&lt;br /&gt; Avinash Chugh&lt;br /&gt;
        Vineeth Venudasan&lt;br /&gt; Jijesh Mohan&lt;br /&gt;&lt;br /&gt;
    	&lt;b&gt;The source code is available here:&lt;/b&gt;&lt;br /&gt;
    	https://github.com/avinash-chugh/proxime
    </string>

    <string name="event_kind_title">What do you want to do ?</string>
    <string name="notify_self">Notify Self</string>
    <string name="send_message">Send Message</string>

    <!-- toast messages -->
    <string name="toast_event_created">The event \'%s\' has been created</string>
    <string name="toast_event_modified">Your changes to the event \'%s\' has been saved</string>
    <string name="toast_event_removed">The event \'%s\' has been removed</string>
    <string name="toast_location_created">The location \'%s\' has been created</string>
    <string name="toast_location_modified">Your changes to the location \'%s\' has been saved</string>
    <string name="toast_location_removed">The location \'%s\' has been removed</string>

    <!-- edit location -->
    <string name="label_type_location">Type in a location</string>
    <string name="find_location">Find</string>
    <string name="not_specified">(Not specified)</string>
</resources>
