<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
        >
    <TextView
            android:text="@string/message_title"
            style="@style/caption"/>
    <TextView
            android:id="@+id/view_event_message"
            style="@style/text"
            />
    <TextView
            android:text="@string/contacts_title"
            style="@style/caption"/>
    <TextView
            android:id="@+id/view_event_contact"
            style="@style/text"/>
    <TextView
            android:text="@string/locations_title"
            style="@style/caption"/>
    <TextView
            android:id="@+id/view_event_location"
            style="@style/text"/>
</LinearLayout>