<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <ScrollView
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_weight="1">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:background="@drawable/black_rectangular_background"
                    android:padding="5px"
                    android:layout_marginTop="5px">
                <TextView
                        android:id="@+id/edit_event_name_label"
                        android:text="@string/name"
                        android:layout_width="wrap_content"
                        style="@style/caption"/>
                <EditText
                        android:id="@+id/edit_event_name"
                        style="@style/textbox"
                        android:layout_width="fill_parent"
                        android:layout_below="@id/edit_event_name_label"
                        />
            </RelativeLayout>
            <TextView
                    android:text="@string/event_kind_title"
                    style="@style/caption"/>
            <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <RadioButton android:id="@+id/edit_event_notify_self"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/notify_self"/>
                <RadioButton android:id="@+id/edit_event_send_message"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/send_message"/>
            </RadioGroup>
            <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:id="@+id/edit_event_contact_view_group"
                    android:background="@drawable/black_rectangular_background"
                    android:padding="3px"
                    >
                <TextView
                        android:id="@+id/edit_event_contacts_title"
                        android:text="@string/contacts_title"
                        android:hint="@string/not_specified"
                        style="@style/caption"/>
                <Button
                        android:id="@+id/edit_event_add_contact"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:background="@drawable/create_button"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="3px"
                        android:layout_marginRight="5px"/>
            </RelativeLayout>
            <TextView
                    style="@style/text"
                    android:id="@+id/edit_event_contact"/>
            <!--<ListView-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/edit_event_contacts_list">-->
            <!--</ListView>-->


            <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:background="@drawable/black_rectangular_background"
                    android:padding="3px">
                <TextView
                        android:text="@string/locations_title"
                        style="@style/caption"/>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_event_add_location"
                        android:background="@drawable/create_button"
                        android:layout_gravity="center"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="3px"
                        android:layout_marginRight="5px"/>
            </RelativeLayout>

            <TextView
                    style="@style/text"
                    android:id="@+id/edit_event_location"
                    android:hint="@string/not_specified"/>

            <LinearLayout android:background="@drawable/black_rectangular_background"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:padding="3px"
                          android:layout_marginTop="10px">
            <TextView
                    android:text="@string/message_title"
                    style="@style/caption"/>
            </LinearLayout>
            <EditText
                    android:id="@+id/edit_event_message"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:singleLine="false" android:lines="5"
                    android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
                    android:layout_marginTop="10px"
                    />



        </LinearLayout>
    </ScrollView>


    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
        <Button
                android:id="@+id/edit_event_save"
                android:text="@string/save"
                style="@style/button_row"/>
        <Button
                android:id="@+id/edit_event_cancel"
                android:text="@string/cancel"
                android:layout_toRightOf="@id/edit_event_save"
                style="@style/button_row"/>
    </LinearLayout>
</LinearLayout>