<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">
    <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
        <TextView
                android:id="@+id/location_name_title"
                android:text="@string/location_name"
                android:layout_width="wrap_content"
                style="@style/caption"/>
        <EditText
                android:id="@+id/location_name"
                style="@style/header"
                android:layout_width="fill_parent"
                android:layout_toRightOf="@id/location_name_title"
                />
    </RelativeLayout>
    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:orientation="horizontal">
        <Button
                android:id="@+id/location_save"
                android:text="@string/save"
                style="@style/button_row"/>
        <Button
                android:id="@+id/location_cancel"
                android:text="@string/cancel"
                android:layout_toRightOf="@id/location_save"
                style="@style/button_row"/>
    </LinearLayout>
</LinearLayout>